@@ -73,6 +73,7 @@ private:
 
 	/** all available filters */
 	static std::vector<Filter const *> _filters;
+	static void maybe_add (std::string, std::string, std::string, std::string);
 };
 
 #endif
